# colorhist

./: CMakeLists.txt  README.md  package.xml  setup.py
apps/: feature_viewer
conf/: detection.ros.ork  training.ork
python/object_recognition_colorhist/: detector.py  trainer.py
src/: CMakeLists.txt  Datatype help
src/common/: db_colorhist.cpp  db_colorhist.h  visualizer.cpp  visualizer.h
src/detection/: Detector.cpp  ModelReader.cpp  detection.cpp  detection.h  filtering.cpp  filtering.h  module.cpp
src/training/: ModelFiller.cpp  Trainer.cpp  module.cpp  training.cpp  training.h
