<package>
  <name>object_recognition_colorhist</name>
  <version>0.1.0</version>
  <description>Colorhist Object Recognition a standard bag of features approach</description>
  <author email="ms-152615@hs-weingarten.de">Marcel Schmidt</author>
  <maintainer email="ms-152615@hs-weingarten.de">Marcel Schmidt</maintainer>
  <license>BSD</license>

  <!-- <url>http://wg-perception.github.io/tod/</url> -->

  <build_depend>cmake_modules</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>opencv_candidate</build_depend>

  <run_depend>ecto</run_depend>
  <run_depend>ecto_opencv</run_depend>
  <run_depend>ecto_openni</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>opencv_candidate</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
